fix: github link square overflow

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,6 +5,7 @@
 	min-block-size: 64px;
 	text-align: center;
 	padding-block: 20px;
+	font-size: 14px;
 }
 
 .link {
